# src/main/java/com/proyectum/users/infrastructure/repository/role/mapper/RoleEntityMapper.java
@@ -1,9 +1,8 @@
 package com.proyectum.users.infrastructure.repository.role.mapper;
 
 import com.proyectum.users.ddd.aggregate.AggregateID;
-import com.proyectum.users.domain.model.role.Description;
-import com.proyectum.users.domain.model.role.Name;
-import com.proyectum.users.domain.model.role.RoleAggregate;
+import com.proyectum.users.domain.model.role.*;
+import com.proyectum.users.infrastructure.repository.postgres.entity.PermissionEntity;
 import com.proyectum.users.infrastructure.repository.postgres.entity.RoleEntity;
 import org.mapstruct.Mapper;
 
@@ -15,6 +14,12 @@ public interface RoleEntityMapper {
     RoleEntity to(RoleAggregate src);
 
     RoleAggregate to(RoleEntity src);
+
+    Permission to(PermissionEntity src);
+
+    default PermissionID toPermissionID(UUID src) {
+        return new PermissionID(src);
+    }
 
     default AggregateID toAggregateId(UUID src) {
         return new AggregateID(src);
@@ -31,6 +36,11 @@ public interface RoleEntityMapper {
     default UUID toUUID(AggregateID src) {
         return src.value();
     }
+
+    default UUID toUUID(PermissionID src) {
+        return src.value();
+    }
+
 
     default String toName(Name src) {
         return src.value();
