# src/main/resources/api/openapi.yml
@@ -113,6 +113,25 @@ components:
           type: string
           maxLength: 100
           minLength: 5
+        permissions:
+          type: array
+          items:
+            $ref: '#/components/schemas/Permission'
+    Permission:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: '66a822be-b28a-4258-9a51-f6bd017ba0fe'
+        name:
+          type: string
+          maxLength: 40
+          minLength: 3
+        description:
+          type: string
+          maxLength: 100
+          minLength: 5
     SignInRequest:
       type: object
       required:
